--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,7 @@
 
     <!-- 城市管理 -->
     <string name="title_activity_city_manage">城市管理</string>
-    <string name="city_default">设为默认</string>
+    <string name="city_default">默认</string>
+    <string name="city_setting_default">设为默认</string>
 
 </resources>
