--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,8 @@
 
     <!-- 日出日落 -->
     <string name="Sunlight">日出日落</string>
+    <string name="Monthly">月出月落</string>
+    <string name="Alternates">昼夜交替</string>
 
     <!-- 风向风力 -->
     <string name="Wind">风向风力</string>
@@ -52,8 +54,7 @@
     <string name="no_matched_city">没有符合条件的城市</string>
     <string name="current_location_addresss">当前城市</string>
     <string name="toast_not_location">"不存在位置提供器的情况"</string>
+    <string name="forecast_item_date_format">%s月%s日 %s</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
