--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,5 +57,8 @@
     <string name="forecast_item_date_format">%s月%s日 %s</string>
 
     <string name="loading">加载中...</string>
+    <string name="city_already_exists">城市（%1$s）已添加</string>
+    <string name="no_location">没有定位信息.
+        使用网络地址定位</string>
 
 </resources>
